--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,48 @@
 
-  body {
-    /* background: url(assets/fridge.png) no-repeat; */
-  }
+body {
+/* background: url(assets/fridge.png) no-repeat; */
+}
 
 #directions-text {
-  color: red;
+  backround-color: rgb(183, 233, 233);
   border: none;
+  text-decoration-color: rgb(6, 65, 65);
+  font-size : 35pt;
+  text-decoration-style: double;
 }
 #userchoice-text {
+  width: 300px;
+  height: 30px;
   color: yellow;
-  border-style: solid;
-  border = 3px;
+  font-size : 20pt;
 }
 #letteralready-text{
+  width: 300px;
+  height: 30px;
   color: green;
   border-style: solid;
   border = 3px;
+  font-size : 20pt;
+  text-align = center;
 }
 #wins-text{
+  width: 300px;
+  height: 30px;
   color: blue;
   border-style: solid;
   border = 3px;
+  font-size : 20pt;
+  text-align = center;
 }
 #remaining-text{
+  width: 300px;
+  height: 30px;
   color: black;
   border-style: solid;
   border = 3px;
+  font-size : 20pt;
+  text-align = center;
 }
 #hangmanimg {
-  float: right;
+  float: right; 
 }
