--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,9 @@ h3, h2 {
   margin-top: 10px;
   margin-right: 25px;
 }
-
+#audiocon{
+ float: left;
+}
 /* =======================contact page===================== */
 
 label,
