add moving text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 960px;
+  max-width: 1024px;
   margin-left: 30px;
   clear: both;
 }
@@ -43,10 +43,18 @@ h3 {
 }
 
 h1 {
-  padding-bottom: 20px;
+  float: left;
+  width: 100%;
+  /* max-width: 960; */
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #dddddd;
+  font-weight: 700;
+  line-height: 90px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
 h2,
@@ -101,8 +109,10 @@ h3 {
 
 #directions-text {
   margin: 15px;
+  padding: 15px;
+  font-family: Georgia, Times, "Times New Roman", serif;
   font-size : 35pt;
-  color : royalblue;
+  color : #4aaaa5;
 }
 #userchoice-text {
   font-size : 20pt;
@@ -122,11 +132,70 @@ h3 {
   font-size : 20pt;
   margin: 15px;
 }
+#numberofgames-text{
+  font-size : 20pt;
+  margin: 15px;
+}
 #hangmanimg {
   float: right; 
   margin-right : 30px;
 }
 
+/* ======================================================= */
+/* ==================screen animation==================== */
+
+#directions-text {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid #777777; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+ /* letter-spacing: .15em; *//* Adjust as needed */
+  animation: 
+    typing 4s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #777777; }
+}
+
+/* #bigtitle {
+  animation: move 3s;
+  -webkit-animation: move 3s;
+}
+
+@keyframes move {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+             
+@-webkit-keyframes move {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+*/
 
 /* ======================================================= */
 /* ==================screen resolution==================== */
